# goit-pythonweb-hw-08

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
migration/: env.py
migration/versions/: f842bed03343_create_table_contacts.py
src/: connection.py  main.py  models.py  schemas.py  settings.py
