[project]
name = "contactshub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "psycopg2-binary>=2.9.0",
    "black>=25.12.0",
    "faker>=30.0.0",
]
